--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto</title>
+    <!--Icons-->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <!-- SWIPER -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+    />
     <!--Styles-->
     <link rel="stylesheet" href="style.css" />
+
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +26,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">beauty<span>salon.</span> </a>
         <!--Menu-->
         <div class="menu">
@@ -30,12 +38,13 @@
             <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <div class="open">...</div>
-        <div class="close">x</div>
+        <!-- Menu buttons -->
+        <div onclick="menuToggle()" class="toggle icon-menu"></div>
+        <div onclick="menuToggle()" class="toggle icon-close"></div>
       </nav>
     </header>
-
     <main>
+      <!-- HOME -->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -55,19 +64,182 @@
         </div>
       </section>
       <div class="divider1"></div>
+      <!-- ABOUT -->
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80"
+              alt="Equipe do salão sorrindo"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse sagittis arcu quis nisi luctus, id accumsan felis
+              tristique. Proin quis bibendum diam. Sed consequat nisl laoreet
+              eros ultricies pellentesque. Nullam in est porta, pellentesque
+              massa vitae, vehicula risus.
+            </p>
+            <br />
+            <p>
+              In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut
+              pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec
+              luctus, nunc finibus elementum suscipit, tortor augue vulputate
+              sapien, vitae feugiat enim augue sed.
+            </p>
+            <br />
+            <p>
+              Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis
+              rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu
+              tincidunt tincidunt. Curabitur fringilla, risus at feugiat
+              feugiat, nisl nulla tincidunt tellus, elementum elementum lorem
+              nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.
+            </p>
+          </div>
+        </div>
       </section>
+      <div class="divider2"></div>
+      <!-- SERVICES -->
       <section class="section" id="services">
-        <div class="container grid">Serviços</div>
+        <div class="container grid">
+          <header>
+            <div class="text">
+              <h2 class="title">Serviços</h2>
+              <p>
+                Com mais de 10 anos no mercado, o <span>Beautysalon</span> já
+                conquistou clientes de inúmeros países com seus tratamentos
+                exclusivos e totalmente naturais
+              </p>
+            </div>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia capilar</h3>
+              <p>
+                Terapia completa para couro cabeludo e fios, protegendo todos os
+                tipos de cabelos, inclusive os longos e finos.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>
+                A nossa equipe é repleta de profissionais renomados, famosos por
+                lançarem tendências com cortes diferenciados e clássicos.
+              </p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamento</h3>
+              <p>
+                O beautysalon conta com diversos tratamentos naturais e
+                totalmente veganos, para qualquer tipo de cabelo.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
+      <div class="divider1"></div>
+      <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
-        <div class="container grid">Depoimentos</div>
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="swiper testimonials">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide testimonial">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>Eu sou cliente do Beautysalon há 5 anos
+                    e não troco por nada! Certamente meu cabelo mudou muito
+                    depois que comecei a tratar somente com produtos naturais e
+                    veganos. São profissionais incríveis e qualificados.
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/63.jpg"
+                      alt=""
+                    />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+              <div class="swiper-slide testimonial">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>Eu sou cliente do Beautysalon há 5 anos
+                    e não troco por nada! Certamente meu cabelo mudou muito
+                    depois que comecei a tratar somente com produtos naturais e
+                    veganos. São profissionais incríveis e qualificados.
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/44.jpg"
+                      alt=""
+                    />
+                    Wanessa Souza
+                  </cite>
+                </blockquote>
+              </div>
+              <div class="swiper-slide testimonial">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Reprehenderit unde odit, voluptates
+                    corporis sint blanditiis vel veritatis adipisci incidunt
+                    amet maiores, ut porro facilis repudiandae, illum inventore
+                    ipsa ratione possimus.
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/men/84.jpg"
+                      alt=""
+                    />
+                    Fernando Bezerra
+                  </cite>
+                </blockquote>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
       </section>
+      <div class="divider2"></div>
+      <!-- CONTACT -->
       <section class="section" id="contact">
-        <div class="container grid">Contato</div>
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente!</h2>
+            <p>
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              target="_blank"
+              href="https://api.whatsapp.com/send?phone=+5581996093008&text=Olá! Achei interessante o seu trabalho e gostaria de entrar em contato"
+              class="button"
+              ><i class="icon-whatsapp"></i>Entrar em contato</a
+            >
+          </div>
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"></i>81 996093008</li>
+              <li><i class="icon-map-pin"></i>R Aviador severiano lins</li>
+              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
-    <!--adicionar comentário-->
+    <!--Scripts-->
+    <!-- swiper -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- ScrollReveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="main.js"></script>
   </body>
 </html>
