--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">beauty<span>salon.</span> </a>
+        <a class="logo" href="#">beauty<span>salon</span>.</a>
         <!--Menu-->
         <div class="menu">
           <ul class="grid">
@@ -235,6 +235,28 @@
         </div>
       </section>
     </main>
+    <!-- FOOTER -->
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo" href="#home">beauty<span>salon</span>. </a>
+          <p>©2021 Beautysalon</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+        <div class="socialLinks">
+          <a href="https://instagram.com" target="_blank"
+            ><i class="icon-instagram"></i
+          ></a>
+          <a href="https://facebook.com" target="_blank"
+            ><i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+    <div class="returnButton"><i class="icon-arrow-up"></i></div>
     <!--Scripts-->
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
