Melhoria da funcionalidade return to top

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         </div>
       </div>
     </footer>
-    <div class="returnButton"><i class="icon-arrow-up"></i></div>
+    <div class="returnButton invisible"><i class="icon-arrow-up"></i></div>
     <!--Scripts-->
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
