Correção de margin do carousel

--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>Eu sou cliente do Beautysalon há 5 anos
-                    e não troco por nada! Certamente meu cabelo mudou muito
-                    depois que comecei a tratar somente com produtos naturais e
-                    veganos. São profissionais incríveis e qualificados.
+                    e não troco por nada! São profissionais incríveis e
+                    qualificados.
                   </p>
                   <cite>
                     <img
